--- a/src/app/components/sales/collections/collections.component.css
+++ b/src/app/components/sales/collections/collections.component.css
@@ -109,7 +109,7 @@
   }
   
   /* font */
-  h2,
+  h2,h1,h4,h5,h6,
   h3,
 a,
 h4,
@@ -118,7 +118,7 @@ label,
 input,
 button,
  span, select {
-    font-family: "Cairo", sans-serif;
+    font-family: "Cairo", sans-serif !important;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
