--- a/src/app/components/staff/received-covenant/received-covenant.component.css
+++ b/src/app/components/staff/received-covenant/received-covenant.component.css
@@ -154,7 +154,7 @@
 }
 
 /* font */
-h2,
+h2,h1,h6,
 h3,
 a,
 h4,
@@ -164,7 +164,7 @@ label,
 input,
 button,
 tr, th, tr,textarea {
-  font-family: "Cairo", sans-serif;
+  font-family: "Cairo", sans-serif !important;
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
