--- a/src/app/components/stock/stock/unit/unit.component.html
+++ b/src/app/components/stock/stock/unit/unit.component.html
@@ -1,5 +1,4 @@
 <div class="wrapper">
-    <app-sidebar></app-sidebar>
     <!-- Sidebar component on the left -->
   
     <div class="main-panel">
@@ -145,7 +144,7 @@
                           <th>اسم الوحده باللغه المحلية</th>
                           <th>اسم الوحده</th>
                           <th class="firstcolright">
-                            <input type="checkbox" class="large-checkbox" />
+                            <input type="checkbox" class="large-checkbox mx-1" />
                           </th>
                         </tr>
                       </thead>
