--- a/src/app/components/sales/clients/tag/tag.component.css
+++ b/src/app/components/sales/clients/tag/tag.component.css
@@ -118,7 +118,7 @@ label,
 input,
 button,
  span, select, option {
-    font-family: "Cairo", sans-serif;
+    font-family: "Cairo", sans-serif !important;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
