--- a/src/app/components/sales/clients/tag/tag.component.html
+++ b/src/app/components/sales/clients/tag/tag.component.html
@@ -1,4 +1,3 @@
-<app-sidebar></app-sidebar>
 <div class="main-panel">
     <div class="container">
         <div class="page-inner">
@@ -69,18 +68,25 @@
                                 </select>
                             </div>
 
-                            <button class="btn  my-custom-icone">
-                                <span class="btn-label">
-                                    <i class="fa-solid fa-sliders"></i>
-                                </span>
-
-                            </button>
-
-                            <form class="d-flex position-relative me-2">
-                                <input class="form-control text-end search-input" type="search"
-                                    placeholder="بحث في الكل" aria-label="Search" />
-                                <i class="fs-4 bi-search position-absolute search-icon"></i>
-                            </form>
+                            <div class="icon-group d-flex align-items-center">
+                                <button class="btn my-custom-icone">
+                                  <span class="btn-label">
+                                    <i class="fa-solid fa-table-cells-large"></i>
+                                  </span>
+                                </button>
+                
+                                <button class="btn my-custom-icone" style="background-color: #224273; color: #e7e7ea">
+                                  <span class="btn-label">
+                                    <i class="fa-solid fa-list-ul"></i>
+                                  </span>
+                                </button>
+                
+                                <button class="btn my-custom-icone">
+                                  <span class="btn-label">
+                                    <i class="fa-solid fa-bag-shopping my-icone"></i>
+                                  </span>
+                                </button>
+                              </div>
                             <div class="icon-group d-flex align-items-center">
 
                                 <button class="btn  my-custom-icone">
