--- a/src/app/components/sales/sales.component.html
+++ b/src/app/components/sales/sales.component.html
@@ -1,4 +1,3 @@
-<app-sidebar></app-sidebar>
 
 <div class="main-panel">
   <div class="container">
@@ -120,6 +119,7 @@
                   <thead>
                     <tr class="firstcol">
                       <th class="firstcolleft">مدير القسم</th>
+                      <!-- <th>الحالة</th> -->
                       <th>المندوب</th>
                       <th>الكود</th>
                       <th>العميل</th>
@@ -134,6 +134,7 @@
                   </thead>
                   <tbody>
                     <tr *ngFor="let item of salesOffers; let i =index">
+                      <!-- <td>{{item.deliveryStatus}}</td> -->
                       <td> </td>
                       <td>{{item.representativeName}}</td>
                       <td>{{item.code}}</td>
@@ -141,7 +142,7 @@
                       <td>{{item.teamName}}</td>
                       <td>11/11/2024</td>
                       <td>{{i + 1}}</td>
-                      <td> <input type="checkbox" class="large-checkbox" />
+                      <td> <input type="checkbox" (click)="onCheckboxChange(item)" class="large-checkbox" />
                       </td>
                     </tr>
                  
