--- a/src/app/components/staff/sections/sections.component.css
+++ b/src/app/components/staff/sections/sections.component.css
@@ -169,7 +169,7 @@ label,
 input,
 button,
 tr, th, tr {
-   font-family: "Cairo", sans-serif;
+   font-family: "Cairo", sans-serif !important;
    font-optical-sizing: auto;
    font-weight: 600;
    font-style: normal;
