--- a/src/app/components/staff/staff.component.css
+++ b/src/app/components/staff/staff.component.css
@@ -201,7 +201,7 @@
 }
 
   /* font */
-  h2,
+  h2,h1,h6,
   h3,
   h5,
 a,
@@ -211,7 +211,7 @@ label,
 input,
 button,
 tr, th, tr, select {
-    font-family: "Cairo", sans-serif;
+    font-family: "Cairo", sans-serif !important;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
