--- a/src/app/components/stock/categories/cateogries/cateogries.component.css
+++ b/src/app/components/stock/categories/cateogries/cateogries.component.css
@@ -160,7 +160,7 @@ label,
 input,
 button,
 tr, th, tr {
-    font-family: "Cairo", sans-serif;
+    font-family: "Cairo", sans-serif !important;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
